# TwinRobotKalmanFilter

./: Beacon.cc  CMakeLists.txt  README.md  libBeacon.dylib  libmodelR1_control.dylib  libmodelR2_control.dylib  modelR1_control.cc  modelR2_control.cc  projectWorld.world
